force-app/main/default/objects/Expense__c/fields/Date_Incurred__c.field-meta.xml
<CustomField>
    <fullName>Date_Incurred__c</fullName>
    <label>Date Incurred</label>
    <type>Date</type>
</CustomField>