force-app/main/default/objects/Expense__c/fields/Incurred_by_Resource__c.field-meta.xml
<CustomField>
    <fullName>Incurred_by_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incurred by Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>