force-app/main/default/objects/Expense__c/fields/Incurred_by_User__c.field-meta.xml
<CustomField>
    <fullName>Incurred_by_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incurred by User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>