force-app/main/default/objects/Expense__c/validationRules/Required_Incurred_by_Resource_or_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Incurred_by_Resource_or_User</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISBLANK(Incurred_by_User__c), ISBLANK( Incurred_by_Resource__c ) 
)</errorConditionFormula>
    <errorMessage>Incurred by Resource or Incurred by User must contain a value</errorMessage>
</ValidationRule>